--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 !.gitkeep
+!app/tsconfig.json
 node_modules/
 typings/
 tmp
 .DS_Store
 .idea
 *.iml
-app/**/*.js*
-!app/tsconfig.json
-app/**/*.d.ts
-app/**/*.ngfactory.ts
+**/*.js
+**/*.map
+**/*.d.ts
+**/*.ngfactory.ts
 aot
