--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     }
   ],
   "scripts": {
-    "start": "npm run build && concurrently \"tsc -w\" \"lite-server\"",
+    "start": "\"tsc -w\" \"lite-server\"",
     "ngc": "ngc",
-    "build": "rm -rf dist && ngc -p app",
-    "prepublish": "npm run build"
+    "build": "rm -rf dist && ngc -p app"
   },
   "main": "dist/spinners.js",
   "typings": "dist/spinners.d.ts",
   "devDependencies": {
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/core": "^5.1.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
-    "@types/node": "8.5.1",
-    "concurrently": "3.5.1",
-    "core-js": "2.5.3",
-    "lite-server": "2.3.0",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.5.5",
-    "systemjs": "0.20.19",
-    "ts-loader": "3.2.0",
-    "typescript": "2.6.2",
-    "zone.js": "0.8.18"
+    "@angular/cli": "^9.0.3",
+    "@angular/common": "^9.0.2",
+    "@angular/compiler": "^9.0.2",
+    "@angular/compiler-cli": "^9.0.2",
+    "@angular/core": "^9.0.2",
+    "@angular/platform-browser": "^9.0.2",
+    "@angular/platform-browser-dynamic": "^9.0.2",
+    "@types/node": "^13.7.4",
+    "concurrently": "^5.1.0",
+    "core-js": "^3.6.4",
+    "lite-server": "^2.5.4",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4",
+    "systemjs": "^6.2.3",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.6.5",
+    "zone.js": "^0.10.2"
   }
 }
